Avoid jumpy in header

--- a/app/javascript/app/components/nav/nav-styles.scss
+++ b/app/javascript/app/components/nav/nav-styles.scss
@@ -142,6 +142,8 @@ $flag-height: 40px;
 
 // Sticky navbar styles when it's visible
 .stickyWrapper {
+  max-height: 55px;
+
   .header {
     padding-top: 0;
   }
